Resolved overflowing boxes and alignment issues

--- a/style.css
+++ b/style.css
@@ -5,34 +5,32 @@
     margin: 0;
     padding: 0;
 }
+.title{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: blueviolet;
+    padding: 30px;
+    font-size: 25px;
+}
+.title h1{
+    font-size: 55px;
+}
+
 .main-container{
     display: flex;
     justify-content: center;
-/* 
-    width: 500px;
-    height: 500px; */
-    /* border: 1px solid black; */
+    margin: 0px;
+    padding: 0px;
 }
 .container{
     display: flex;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
-    overflow-y: hidden;
-    gap: 0px;
-    /* justify-content: center; */
-    /* align-items: center; */
+    flex-direction: column;
+    width: 502px;
+    height: 502px;
+    background-color: azure;
     border: 1px solid black;
-    /* flex-direction: column; */
-    /* margin-top: 300px; */
+    margin: 10px;
+    padding: 0px;
 }
-
-.box{
-    /* width: 16px;
-    height: 16px;
-    border: 1px solid black;
-    transition: background-color 0.3s; */
-}
-/* .box:hover{
-    background-color: blue;
-} */
